# background

./: .gitignore  .hgignore
.github/: readme.md
cpp_qt/examples/example_service/: CMakeLists.txt  application.hpp  logger.cpp  logger.hpp  main.cpp
cpp_qt/sources/background/: application  background_application.cpp  background_application.hpp  background_application_controller.hpp  background_application_controller_qt.cpp  background_application_controller_qt.hpp  background_console_platform.hpp  background_console_platform_windows.cpp  background_console_platform_windows.hpp  background_datatypes.hpp  background_datatypes_forward.hpp  background_event_loop_controller.hpp  background_event_loop_controller_qt.cpp  background_event_loop_controller_qt.hpp  background_library.hpp  background_service.cpp  background_service.hpp  background_service_platform.hpp  background_service_platform_windows.cpp  background_service_platform_windows.hpp  service
cpp_qt/tests/automatic/test_application/: CMakeLists.txt  test_application.cpp
cpp_qt/tests/automatic/test_service/: CMakeLists.txt  test_service.cpp
